src/app/body/body.component.scss
.button {

  width: 100%;
  height: 100%;

  border-radius: 0 !important;
}

.container {
  position: absolute;

  top: 0;
  left: 0;
  bottom: 0;
  right: 0;

  display: flex;
  justify-content: center;
  align-items: center;

  pointer-events: none;
  user-select: none;
}

.icon {
  width: 100%;
  height: 100%;

  max-width: 500px;
  max-height: 500px;

  box-sizing: border-box;
  padding: 60px;
}


.shaking {
  animation: shake 300ms cubic-bezier(.36,.07,.19,.97) infinite;
  transform: scale(1);
}

@keyframes shake {
  0% { transform: translate(0, 0) rotate(0deg); }
  25% { transform: translate(5px, 5px) rotate(5deg); }
  50% { transform: translate(0, 0) rotate(0deg); }
  75% { transform: translate(-5px, 5px) rotate(-5deg); }
  100% { transform: translate(0, 0) rotate(0deg); }
}

